# Sparse-Needle

./: .gitignore  CMakeLists.txt  Inference.ipynb  Makefile  Pruning.ipynb  README.md
.ipynb_checkpoints/: Inference-checkpoint.ipynb
app/: 1.Training.ipynb  2.Pruning.ipynb  3.Inference.ipynb  4.spmm.ipynb
python/needle/: __init__.py  autograd.py  backend_numpy.py  data.py  init.py  nn.py  ops.py  optim.py  prune.py
python/needle/backend_ndarray/: ndarray.py  ndarray_backend_numpy.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
src/.ipynb_checkpoints/: ndarray_backend_cuda-checkpoint.cu
tests/: test_ndarray.py
weights/: gmodel284l4_5epoch.pkl  gmodel_5epoch  gmodel_5epoch.pkl
